// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditEvent /> should display inputs typed on the form 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditEvent
    match={
      Object {
        "params": Object {
          "eventId": 1,
        },
      }
    }
    singleEvent={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(Navbar) />,
        <div
          className="container add"
        >
          <section>
            <h4
              className="font-weight-bold text-center"
            >
              Edit Event
            </h4>
          </section>
          <section>
            <div
              className="container"
            >
              <Form
                date="2013-05-04"
                description="awesome"
                editing={false}
                errorMessage=""
                errorStatus={false}
                errors={Object {}}
                handleChange={[Function]}
                handleSubmit={[Function]}
                handleUpload={[Function]}
                image="image.png"
                imgPreviewSrc=""
                loading={true}
                title="test"
                type="wedding"
              />
            </div>
          </section>
        </div>,
      ],
      "className": "space",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <section>
              <h4
                className="font-weight-bold text-center"
              >
                Edit Event
              </h4>
            </section>,
            <section>
              <div
                className="container"
              >
                <Form
                  date="2013-05-04"
                  description="awesome"
                  editing={false}
                  errorMessage=""
                  errorStatus={false}
                  errors={Object {}}
                  handleChange={[Function]}
                  handleSubmit={[Function]}
                  handleUpload={[Function]}
                  image="image.png"
                  imgPreviewSrc=""
                  loading={true}
                  title="test"
                  type="wedding"
                />
              </div>
            </section>,
          ],
          "className": "container add",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h4
                className="font-weight-bold text-center"
              >
                Edit Event
              </h4>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Edit Event",
                "className": "font-weight-bold text-center",
              },
              "ref": null,
              "rendered": "Edit Event",
              "type": "h4",
            },
            "type": "section",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="container"
              >
                <Form
                  date="2013-05-04"
                  description="awesome"
                  editing={false}
                  errorMessage=""
                  errorStatus={false}
                  errors={Object {}}
                  handleChange={[Function]}
                  handleSubmit={[Function]}
                  handleUpload={[Function]}
                  image="image.png"
                  imgPreviewSrc=""
                  loading={true}
                  title="test"
                  type="wedding"
                />
              </div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Form
                  date="2013-05-04"
                  description="awesome"
                  editing={false}
                  errorMessage=""
                  errorStatus={false}
                  errors={Object {}}
                  handleChange={[Function]}
                  handleSubmit={[Function]}
                  handleUpload={[Function]}
                  image="image.png"
                  imgPreviewSrc=""
                  loading={true}
                  title="test"
                  type="wedding"
                />,
                "className": "container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "date": "2013-05-04",
                  "description": "awesome",
                  "editing": false,
                  "errorMessage": "",
                  "errorStatus": false,
                  "errors": Object {},
                  "handleChange": [Function],
                  "handleSubmit": [Function],
                  "handleUpload": [Function],
                  "image": "image.png",
                  "imgPreviewSrc": "",
                  "loading": true,
                  "title": "test",
                  "type": "wedding",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            "type": "section",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(Navbar) />,
          <div
            className="container add"
          >
            <section>
              <h4
                className="font-weight-bold text-center"
              >
                Edit Event
              </h4>
            </section>
            <section>
              <div
                className="container"
              >
                <Form
                  date="2013-05-04"
                  description="awesome"
                  editing={false}
                  errorMessage=""
                  errorStatus={false}
                  errors={Object {}}
                  handleChange={[Function]}
                  handleSubmit={[Function]}
                  handleUpload={[Function]}
                  image="image.png"
                  imgPreviewSrc=""
                  loading={true}
                  title="test"
                  type="wedding"
                />
              </div>
            </section>
          </div>,
        ],
        "className": "space",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <section>
                <h4
                  className="font-weight-bold text-center"
                >
                  Edit Event
                </h4>
              </section>,
              <section>
                <div
                  className="container"
                >
                  <Form
                    date="2013-05-04"
                    description="awesome"
                    editing={false}
                    errorMessage=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image="image.png"
                    imgPreviewSrc=""
                    loading={true}
                    title="test"
                    type="wedding"
                  />
                </div>
              </section>,
            ],
            "className": "container add",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h4
                  className="font-weight-bold text-center"
                >
                  Edit Event
                </h4>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Edit Event",
                  "className": "font-weight-bold text-center",
                },
                "ref": null,
                "rendered": "Edit Event",
                "type": "h4",
              },
              "type": "section",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="container"
                >
                  <Form
                    date="2013-05-04"
                    description="awesome"
                    editing={false}
                    errorMessage=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image="image.png"
                    imgPreviewSrc=""
                    loading={true}
                    title="test"
                    type="wedding"
                  />
                </div>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Form
                    date="2013-05-04"
                    description="awesome"
                    editing={false}
                    errorMessage=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image="image.png"
                    imgPreviewSrc=""
                    loading={true}
                    title="test"
                    type="wedding"
                  />,
                  "className": "container",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "date": "2013-05-04",
                    "description": "awesome",
                    "editing": false,
                    "errorMessage": "",
                    "errorStatus": false,
                    "errors": Object {},
                    "handleChange": [Function],
                    "handleSubmit": [Function],
                    "handleUpload": [Function],
                    "image": "image.png",
                    "imgPreviewSrc": "",
                    "loading": true,
                    "title": "test",
                    "type": "wedding",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
              "type": "section",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<EditEvent /> should render EventDetails component correctly correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditEvent
    getSingleEvent={
      Object {
        "event": Object {
          "centerId": 1,
          "date": "2013-05-04",
          "description": "awesome",
          "image": "image.png",
          "title": "hihi",
          "type": "wedding",
        },
      }
    }
    match={
      Object {
        "params": Object {
          "eventId": 1,
        },
      }
    }
    singleEvent={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(Navbar) />,
        <div
          className="container add"
        >
          <section>
            <h4
              className="font-weight-bold text-center"
            >
              Edit Event
            </h4>
          </section>
          <section>
            <div
              className="container"
            >
              <Form
                date="2013-05-04"
                description="awesome"
                editing={false}
                errorMessage=""
                errorStatus={false}
                errors={Object {}}
                handleChange={[Function]}
                handleSubmit={[Function]}
                handleUpload={[Function]}
                image="image.png"
                imgPreviewSrc=""
                loading={false}
                title="hihi"
                type="wedding"
              />
            </div>
          </section>
        </div>,
      ],
      "className": "space",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <section>
              <h4
                className="font-weight-bold text-center"
              >
                Edit Event
              </h4>
            </section>,
            <section>
              <div
                className="container"
              >
                <Form
                  date="2013-05-04"
                  description="awesome"
                  editing={false}
                  errorMessage=""
                  errorStatus={false}
                  errors={Object {}}
                  handleChange={[Function]}
                  handleSubmit={[Function]}
                  handleUpload={[Function]}
                  image="image.png"
                  imgPreviewSrc=""
                  loading={false}
                  title="hihi"
                  type="wedding"
                />
              </div>
            </section>,
          ],
          "className": "container add",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h4
                className="font-weight-bold text-center"
              >
                Edit Event
              </h4>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Edit Event",
                "className": "font-weight-bold text-center",
              },
              "ref": null,
              "rendered": "Edit Event",
              "type": "h4",
            },
            "type": "section",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="container"
              >
                <Form
                  date="2013-05-04"
                  description="awesome"
                  editing={false}
                  errorMessage=""
                  errorStatus={false}
                  errors={Object {}}
                  handleChange={[Function]}
                  handleSubmit={[Function]}
                  handleUpload={[Function]}
                  image="image.png"
                  imgPreviewSrc=""
                  loading={false}
                  title="hihi"
                  type="wedding"
                />
              </div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Form
                  date="2013-05-04"
                  description="awesome"
                  editing={false}
                  errorMessage=""
                  errorStatus={false}
                  errors={Object {}}
                  handleChange={[Function]}
                  handleSubmit={[Function]}
                  handleUpload={[Function]}
                  image="image.png"
                  imgPreviewSrc=""
                  loading={false}
                  title="hihi"
                  type="wedding"
                />,
                "className": "container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "date": "2013-05-04",
                  "description": "awesome",
                  "editing": false,
                  "errorMessage": "",
                  "errorStatus": false,
                  "errors": Object {},
                  "handleChange": [Function],
                  "handleSubmit": [Function],
                  "handleUpload": [Function],
                  "image": "image.png",
                  "imgPreviewSrc": "",
                  "loading": false,
                  "title": "hihi",
                  "type": "wedding",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            "type": "section",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(Navbar) />,
          <div
            className="container add"
          >
            <section>
              <h4
                className="font-weight-bold text-center"
              >
                Edit Event
              </h4>
            </section>
            <section>
              <div
                className="container"
              >
                <Form
                  date="2013-05-04"
                  description="awesome"
                  editing={false}
                  errorMessage=""
                  errorStatus={false}
                  errors={Object {}}
                  handleChange={[Function]}
                  handleSubmit={[Function]}
                  handleUpload={[Function]}
                  image="image.png"
                  imgPreviewSrc=""
                  loading={false}
                  title="hihi"
                  type="wedding"
                />
              </div>
            </section>
          </div>,
        ],
        "className": "space",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <section>
                <h4
                  className="font-weight-bold text-center"
                >
                  Edit Event
                </h4>
              </section>,
              <section>
                <div
                  className="container"
                >
                  <Form
                    date="2013-05-04"
                    description="awesome"
                    editing={false}
                    errorMessage=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image="image.png"
                    imgPreviewSrc=""
                    loading={false}
                    title="hihi"
                    type="wedding"
                  />
                </div>
              </section>,
            ],
            "className": "container add",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h4
                  className="font-weight-bold text-center"
                >
                  Edit Event
                </h4>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Edit Event",
                  "className": "font-weight-bold text-center",
                },
                "ref": null,
                "rendered": "Edit Event",
                "type": "h4",
              },
              "type": "section",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="container"
                >
                  <Form
                    date="2013-05-04"
                    description="awesome"
                    editing={false}
                    errorMessage=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image="image.png"
                    imgPreviewSrc=""
                    loading={false}
                    title="hihi"
                    type="wedding"
                  />
                </div>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Form
                    date="2013-05-04"
                    description="awesome"
                    editing={false}
                    errorMessage=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image="image.png"
                    imgPreviewSrc=""
                    loading={false}
                    title="hihi"
                    type="wedding"
                  />,
                  "className": "container",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "date": "2013-05-04",
                    "description": "awesome",
                    "editing": false,
                    "errorMessage": "",
                    "errorStatus": false,
                    "errors": Object {},
                    "handleChange": [Function],
                    "handleSubmit": [Function],
                    "handleUpload": [Function],
                    "image": "image.png",
                    "imgPreviewSrc": "",
                    "loading": false,
                    "title": "hihi",
                    "type": "wedding",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
              "type": "section",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
